<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Symptoms">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="332dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent">

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bsb_bubble_color="#39796b"
            app:bsb_bubble_text_color="#1111"
            app:bsb_max="10"
            app:bsb_min="1"
            app:bsb_second_track_color="#004d40"
            app:bsb_section_count="10"
            app:bsb_section_text_position="bottom_sides"
            app:bsb_show_progress_in_float="false"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="true"
            app:bsb_show_thumb_text="true"
            app:bsb_track_color="#39796b" />

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/symptoms"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="#004d40"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="361dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="88dp"
        android:text="@string/record_your_symptoms_to_see_how_it_impacts_your_daily_life"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Record your symptoms to see how it impacts your daily life." />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="164dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/pain"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="#004d40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Pain" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="230dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/how_do_you_rate_your_pain_today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="How do you rate your pain today ?" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="253dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="250dp"
        android:text="@string/how_many_hours_did_you_sleep"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="How long does it last (Hours) ?" />

    <com.xw.repo.BubbleSeekBar
        android:id="@+id/seekbar2"
        android:layout_width="345dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:bsb_bubble_color="#39796b"
        app:bsb_bubble_text_color="#1111"
        app:bsb_max="10"
        app:bsb_min="1"
        app:bsb_second_track_color="#004d40"
        app:bsb_section_count="10"
        app:bsb_section_text_position="bottom_sides"
        app:bsb_show_progress_in_float="false"
        app:bsb_show_section_mark="true"
        app:bsb_show_section_text="true"
        app:bsb_show_thumb_text="true"
        app:bsb_track_color="#39796b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="163dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="156dp"
        android:text="@string/stiffness"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="#004d40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="332dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.xw.repo.BubbleSeekBar
            android:id="@+id/seekbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bsb_bubble_color="#39796b"
            app:bsb_bubble_text_color="#1111"
            app:bsb_max="10"
            app:bsb_min="1"
            app:bsb_second_track_color="#004d40"
            app:bsb_section_count="10"
            app:bsb_section_text_position="bottom_sides"
            app:bsb_show_progress_in_float="false"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="true"
            app:bsb_show_thumb_text="true"
            app:bsb_track_color="#39796b" />
    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/how_do_you_rate_your_stiffness_today"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="401dp"
        android:layout_height="210dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arth3"
        android:contentDescription="TODO" />

</android.support.constraint.ConstraintLayout>